--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "browserify": "^3.38.1",
     "coffeeify": "^0.6.0",
     "d3": "^3.4.4",
+    "events": "^1.0.0",
+    "jquery": "^2.1.0",
     "watchify": "^0.6.4"
   },
   "license": "MIT"
