--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "jquery": "^2.1.0"
   },
   "browser": {
-    "Stats": "./web/src/vendor/Stats.js"
+    "Stats": "./web/src/vendor/Stats.js",
+    "threejs": "./bower_components/threejs/build/three.js"
   },
   "browserify-shim": {
-    "Stats": "Stats"
+    "Stats": "Stats",
+    "threejs": "THREE"
   },
 
   "license": "MIT"
