--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "browserify": "^3.38.1",
     "browserify-shim": "^3.4.1",
+    "browsernizr": "^1.0.2",
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
     "corsproxy": "^0.2.14",
@@ -22,8 +23,10 @@
     "gulp-shell": "^0.2.4",
     "gulp-streamify": "0.0.5",
     "gulp-watch": "^0.6.2",
+    "install": "^0.1.7",
     "jquery": "^2.1.0",
     "lodash": "^2.4.1",
+    "npm": "^1.4.13",
     "three": "^0.66.2",
     "tween": "^0.9.0",
     "vinyl-source-stream": "^0.1.1",
