resizing in asset loader, server side resizer

--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "gulp-shell": "^0.2.4",
     "gulp-streamify": "0.0.5",
     "gulp-watch": "^0.6.2",
+    "imagemagick": "^0.1.3",
     "install": "^0.1.7",
     "jquery": "^2.1.1",
     "lodash": "^2.4.1",
+    "node-resize-image-server": "git://github.com/nthitz/node-resize-image-server",
     "npm": "^1.4.13",
     "three": "^0.66.2",
     "tween": "^0.9.0",
